v0.23.0/_sources/reference/_autoapi/docbuild/cli/cmd_cli/index.rst.txt
docbuild.cli.cmd_cli
====================

.. py:module:: docbuild.cli.cmd_cli

.. autoapi-nested-parse::

   Main CLI tool for document operations.



Functions
---------

.. autoapisummary::

   docbuild.cli.cmd_cli.handle_validation_error
   docbuild.cli.cmd_cli.load_app_config
   docbuild.cli.cmd_cli.parse_key
   docbuild.cli.cmd_cli.apply_override
   docbuild.cli.cmd_cli.load_env_config
   docbuild.cli.cmd_cli.cli


Module Contents
---------------

.. py:function:: handle_validation_error(e: Exception, model_class: type[pydantic.BaseModel], config_files: collections.abc.Sequence[pathlib.Path] | None, verbose: int, ctx: click.Context) -> None

   Format validation errors and exit the CLI.

   Outsourced logic to avoid code duplication between App and Env config phases.
   Using Sequence[Path] ensures compatibility with both lists and tuples.

   :param e: The exception that was raised during validation.
   :param model_class: The Pydantic model class that was being validated
      (AppConfig or EnvConfig).
   :param config_files: The list of config files that were attempted to be
      loaded, used for error context.
   :param verbose: The verbosity level from the CLI options, which can be
      used to control the level of detail in the error output.
   :param ctx: The Click context, used to exit the CLI with an appropriate
      status code after handling the error.


.. py:function:: load_app_config(ctx: click.Context, app_config: pathlib.Path, max_workers: str | None, skip_validation: bool = False) -> None

   Load and validate Application configuration.


.. py:function:: parse_key(key: str) -> list[str]

   Parse dot-separated key path, respecting quoted/bracketed segments.

   Parses a key string that may contain dots as separators or within quoted
   or bracketed segments. This enables setting configuration values where keys
   themselves contain dots (e.g., XSLT parameters).

   Supported delimiters:
   - Single quotes: ``'segment.with.dots'``
   - Double quotes: ``"segment.with.dots"``
   - Square brackets: ``[segment.with.dots]``

   Examples:
       >>> parse_key('server.host')
       ['server', 'host']

       >>> parse_key("server.'db.connection'")
       ['server', 'db.connection']

       >>> parse_key('xslt.html.[show.edit.link]')
       ['xslt', 'html', 'show.edit.link']

   :param key: A dot-separated key path with optional quoted/bracketed segments.
   :return: A list of key segments suitable for nested dictionary access.
   :raises click.BadParameter: If the key contains misplaced delimiters, unmatched
       quotes/brackets, or invalid syntax (e.g., characters after closing delimiter).



.. py:function:: apply_override(config: dict[str, Any], override: str) -> None

   Parse and apply a single KEY=VALUE override to the configuration dictionary.

   Processes a command-line override string (e.g., from ``--set-env``) and merges
   it into the configuration dictionary. The key is parsed to support nested keys
   with dots, and the value is automatically converted to its appropriate type
   (boolean, integer, float, or string).

   Type conversion behavior:
   - ``true``/``false`` (case-insensitive) → ``bool``
   - Numeric literals (e.g., ``42``, ``3.14``) → ``int`` or ``float``
   - Quoted strings (e.g., ``'text'``, ``"text"``) → ``str``
   - Unquoted non-numeric strings → ``str`` (fallback)

   Examples:
       >>> config = {'server': {}}
       >>> apply_override(config, 'server.port=8080')
       >>> config['server']['port']
       8080

       >>> config = {'xslt': {'html': {}}}
       >>> apply_override(config, "xslt.html.'show.edit.link'=true")
       >>> config['xslt']['html']['show.edit.link']
       True

   :param config: The configuration dictionary to update. Intermediate nested
       dictionaries are created as needed.
   :param override: A string in the format ``KEY=VALUE`` where KEY is a dot-separated
       path (supporting quoted/bracketed segments) and VALUE is a literal.
   :raises click.BadParameter: If the override string is malformed (missing '='),
       or if the key syntax is invalid (see :func:`parse_key`).



.. py:function:: load_env_config(ctx: click.Context, env_config: pathlib.Path, env_overrides: tuple[str, ...], skip_validation: bool = False) -> None

   Load and validate Environment configuration.


.. py:function:: cli(ctx: click.Context, verbose: int, dry_run: bool, debug: bool, app_config: pathlib.Path, env_config: pathlib.Path, max_workers: str | None, env_overrides: tuple[str, ...], **kwargs: dict) -> None

   Acts as a main entry point for CLI tool.

   :param ctx: The Click context object.
   :param verbose: The verbosity level.
   :param dry_run: If set, just pretend to run the command without making any changes.
   :param debug: If set, enable debug mode.
   :param app_config: Filename to the application TOML config file.
   :param env_config: Filename to a environment's TOML config file.
   :param env_overrides: A tuple of key-value strings to override env config.
   :param kwargs: Additional keyword arguments.


